// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders message box when commenting disabled 1`] = `
<section
  aria-labelledby="tab-COMMENTS"
  className="App-tabContent coral coral-comments"
  data-testid="current-tab-pane"
  id="tabPane-COMMENTS"
>
  <div
    className="Box-root HorizontalGutter-root StreamContainer-root coral coral-unauthenticated HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifySpaceBetween Flex-alignFlexStart"
    >
      <section
        aria-label="Authentication"
        className="Box-root Flex-root coral coral-viewerBox Flex-flex Flex-wrap Flex-alignCenter"
      >
        <span
          className="UserBoxUnauthenticated-joinText coral coral-viewerBox-joinText"
        >
          Join the conversation
        </span>
        <div
          className="UserBoxUnauthenticated-actions coral coral-viewerBox-actionButtons"
        >
          <button
            className="BaseButton-root Button-base Button-filled Button-fontSizeExtraSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeExtraSmall Button-colorPrimary Button-upperCase UserBoxUnauthenticated-register coral coral-viewerBox-registerButton"
            data-variant="filled"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Register
          </button>
          <button
            className="BaseButton-root Button-base Button-outlined Button-fontSizeExtraSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeExtraSmall Button-colorPrimary Button-upperCase coral coral-viewerBox-signInButton"
            data-variant="outlined"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Sign in
          </button>
        </div>
      </section>
      <div
        className="StreamContainer-rightStreamHeader"
      />
    </div>
    <section
      aria-label="Post a Comment"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-double"
      >
        <div
          className="CallOut-root CallOut-mono CallOut-leftBorder coral coral-createComment-closed"
        >
          <div
            className="CallOut-container"
          >
            <div
              className="CallOut-icon CallOut-mono CallOut-leftIcon"
            >
              <span
                className="SvgIcon-root SvgIcon-sm SvgIcon-strokeWidthRegular SvgIcon-noFill"
              >
                <svg
                  viewBox="-0.25 -0.25 24.5 24.5"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21.75 18.75H11.25L5.25 23.25V18.75H2.25C1.85218 18.75 1.47064 18.592 1.18934 18.3107C0.908035 18.0294 0.75 17.6478 0.75 17.25V2.25C0.75 1.85218 0.908035 1.47064 1.18934 1.18934C1.47064 0.908035 1.85218 0.75 2.25 0.75H21.75C22.1478 0.75 22.5294 0.908035 22.8107 1.18934C23.092 1.47064 23.25 1.85218 23.25 2.25V17.25C23.25 17.6478 23.092 18.0294 22.8107 18.3107C22.5294 18.592 22.1478 18.75 21.75 18.75Z"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                  <path
                    d="M12.75 15C12.5429 15 12.375 14.8321 12.375 14.625C12.375 14.4179 12.5429 14.25 12.75 14.25"
                    stroke="currentColor"
                  />
                  <path
                    d="M12.75 15C12.9571 15 13.125 14.8321 13.125 14.625C13.125 14.4179 12.9571 14.25 12.75 14.25"
                    stroke="currentColor"
                  />
                  <path
                    d="M12.75 11.25V5.25"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </div>
            <div
              className="CallOut-content"
            >
              <div
                className="CallOut-title CallOut-titleBold"
              >
                <div
                  className="Markdown-root"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<p>Commenting disabled</p>
",
                    }
                  }
                />
              </div>
              <div
                className="CallOut-body"
              />
            </div>
          </div>
        </div>
        <div
          className="coral coral-createComment"
        >
          <div
            className="MessageBox-root coral coral-createComment-message"
          >
            <span
              className="SvgIcon-root SvgIcon-sm MessageBoxIcon-root SvgIcon-strokeWidthRegular SvgIcon-noFill"
            >
              <svg
                viewBox="-0.25 -0.25 24.5 24.5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.75,18.75H11.25l-6,4.5v-4.5h-3a1.5,1.5,0,0,1-1.5-1.5v-15A1.5,1.5,0,0,1,2.25.75h19.5a1.5,1.5,0,0,1,1.5,1.5v15A1.5,1.5,0,0,1,21.75,18.75Z"
                  fill="none"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                />
              </svg>
            </span>
            <div
              className="Markdown-root MessageBoxContent-root MessageBoxContainer-withIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p><strong>What do you think</strong>?</p>
",
                }
              }
            />
          </div>
        </div>
      </div>
    </section>
    <div
      className="Box-root HorizontalGutter-root StreamContainer-tabBarContainer HorizontalGutter-spacing-4"
    >
      <nav
        aria-label="Secondary Tablist"
        className="Box-root Flex-root StreamContainer-tabBarRow coral coral-tabBarSecondary-row Flex-flex Flex-justifySpaceBetween Flex-alignFlexEnd Flex-directionRow"
      >
        <ul
          className="TabBar-root TabBar-streamSecondary coral coral-tabBarSecondary coral-tabBarComments StreamContainer-tabBarRoot"
          role="tablist"
        >
          <li
            className="Tab-root"
            id="tab-ALL_COMMENTS"
            role="presentation"
          >
            <button
              aria-controls="tabPane-ALL_COMMENTS"
              aria-selected={true}
              className="BaseButton-root Tab-button Tab-streamSecondary Tab-active coral-tabBarSecondary-tab-active coral coral-tabBarSecondary-tab coral-tabBarComments-allComments"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              role="tab"
              type="button"
            >
              <div
                className="AriaInfo-root"
              >
                <span>
                  Tab:
                </span>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-alignCenter gutter Flex-spacing-1"
              >
                <span>
                  All Comments
                </span>
                <div
                  className="AriaInfo-root"
                >
                  (
                </div>
                <span
                  className="Counter-root Counter-colorInherit Counter-sizeSmall coral coral-counter"
                >
                  <span
                    className="Counter-text"
                  >
                    0
                  </span>
                </span>
                <div
                  className="AriaInfo-root"
                >
                  )
                </div>
              </div>
            </button>
          </li>
        </ul>
        <div
          className="Box-root Flex-root StreamContainer-sortMenu coral coral-sortMenu Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
        >
          <label
            className="SortMenu-label"
            htmlFor="coral-comments-sortMenu"
          >
            Sort by
          </label>
          <span
            className="SelectField-root coral coral-sortMenu"
          >
            <select
              className="SelectField-select SortMenu-select SelectField-selectFont SortMenu-selectFont SelectField-selectColor SortMenu-selectColor coral-selectField"
              id="coral-comments-sortMenu"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              value="CREATED_AT_DESC"
            >
              <option
                value="CREATED_AT_DESC"
              >
                Newest
              </option>
              <option
                value="CREATED_AT_ASC"
              >
                Oldest
              </option>
              <option
                value="REPLIES_DESC"
              >
                Most replies
              </option>
              <option
                value="REACTION_DESC"
              >
                Most Respected
              </option>
            </select>
            <span
              aria-hidden={true}
              className="SelectField-afterWrapper"
            >
              <span
                className="SvgIcon-root SvgIcon-xs SvgIcon-strokeWidthRegular SvgIcon-noFill"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M23.25 7.311L12.53 18.03C12.4604 18.0997 12.3778 18.1549 12.2869 18.1926C12.1959 18.2304 12.0984 18.2498 12 18.2498C11.9016 18.2498 11.8041 18.2304 11.7131 18.1926C11.6222 18.1549 11.5396 18.0997 11.47 18.03L0.75 7.311"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </nav>
      <section
        aria-labelledby="tab-ALL_COMMENTS"
        className="coral coral-allComments"
        id="tabPane-ALL_COMMENTS"
      >
        <div>
          <div />
          <div
            aria-live="off"
            className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
            data-testid="comments-allComments-log"
            id="comments-allComments-log"
            role="log"
          >
            <div
              className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
            >
              <div
                className="CallOut-inner"
              >
                There are no comments yet. Why don't you write one?
              </div>
            </div>
            <div
              data-virtuoso-scroller={true}
              style={
                Object {
                  "height": 0,
                  "position": "relative",
                }
              }
            >
              <div
                data-viewport-type="window"
                style={
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
              >
                <div
                  data-test-id="virtuoso-item-list"
                  style={
                    Object {
                      "boxSizing": "border-box",
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingTop": 0,
                    }
                  }
                />
                <div />
              </div>
            </div>
            <nav
              aria-label="Comments Footer"
              className="CommentsLinks-container coral coral-streamFooter"
            >
              <button
                className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-commentsTopLink"
                data-variant="textUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                title="Go to top of comments"
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-sm ButtonSvgIcon-root CommentsLinks-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.75,8.25h-12l-4.5,4.5V8.25h-3a1.5,1.5,0,0,1-1.5-1.5V2.25A1.5,1.5,0,0,1,2.25.75h19.5a1.5,1.5,0,0,1,1.5,1.5v4.5A1.5,1.5,0,0,1,21.75,8.25Z"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M2.25,11.25a1.5,1.5,0,0,0-1.5,1.5v4.5a1.5,1.5,0,0,0,1.5,1.5h12l4.5,4.5v-4.5h3a1.5,1.5,0,0,0,1.5-1.5v-4.5a1.5,1.5,0,0,0-1.5-1.5H11.25"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
                <span>
                  Top of comments
                </span>
              </button>
              <button
                className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-articleTopLink"
                data-variant="textUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                title="Go to top of article"
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-sm ButtonSvgIcon-root CommentsLinks-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22.5,21.75a1.5,1.5,0,0,1-1.5,1.5H3a1.5,1.5,0,0,1-1.5-1.5V2.25A1.5,1.5,0,0,1,3,.75H18.045a1.5,1.5,0,0,1,1.048.426l2.954,2.883A1.5,1.5,0,0,1,22.5,5.133Z"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M6.045 8.25L18.045 8.25"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M6.045 12.75L18.045 12.75"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M6.045 17.25L12.045 17.25"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
                <span>
                  Top of article
                </span>
              </button>
            </nav>
          </div>
        </div>
      </section>
    </div>
  </div>
</section>
`;

exports[`renders message box when logged in 1`] = `
<section
  aria-labelledby="tab-COMMENTS"
  className="App-tabContent coral coral-comments"
  data-testid="current-tab-pane"
  id="tabPane-COMMENTS"
>
  <div
    className="Box-root HorizontalGutter-root StreamContainer-root coral coral-authenticated HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifySpaceBetween Flex-alignFlexStart"
    >
      <section
        aria-label="Authentication"
        className="coral coral-viewerBox"
      >
        <div
          className="UserBoxAuthenticated-text coral coral-viewerBox-usernameLabel"
        >
          Signed in as
        </div>
        <div
          className="Box-root Flex-root coral coral-viewerBox-usernameContainer Flex-flex Flex-wrap Flex-alignFlexEnd"
        >
          <div
            className="coral coral-viewerBox-username UserBoxAuthenticated-username"
          >
            Markus
          </div>
          <span
            className="UserBoxAuthenticated-text UserBoxAuthenticated-signOut"
          >
            Not you? 
            <button
              className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-colorPrimary Button-underline UserBoxAuthenticated-userBoxButton coral coral-viewerBox-logoutButton"
              data-variant="flat"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              Sign Out
            </button>
          </span>
        </div>
      </section>
      <div
        className="StreamContainer-rightStreamHeader"
      />
    </div>
    <section
      aria-label="Post a Comment"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-double"
      >
        <div
          className="coral coral-createComment"
          id="post-comment-form"
        >
          <div
            className="MessageBox-root coral coral-createComment-message PostCommentForm-messageBox"
          >
            <span
              className="SvgIcon-root SvgIcon-sm MessageBoxIcon-root SvgIcon-strokeWidthRegular SvgIcon-noFill"
            >
              <svg
                viewBox="-0.25 -0.25 24.5 24.5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.75,18.75H11.25l-6,4.5v-4.5h-3a1.5,1.5,0,0,1-1.5-1.5v-15A1.5,1.5,0,0,1,2.25.75h19.5a1.5,1.5,0,0,1,1.5,1.5v15A1.5,1.5,0,0,1,21.75,18.75Z"
                  fill="none"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                />
              </svg>
            </span>
            <div
              className="Markdown-root MessageBoxContent-root MessageBoxContainer-withIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p><strong>What do you think</strong>?</p>
",
                }
              }
            />
          </div>
          <div
            className="coral coral-createComment"
          >
            <form
              autoComplete="off"
              id="comments-postCommentForm-form"
              onSubmit={[Function]}
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-full"
              >
                <div>
                  <label
                    className="AriaInfo-root"
                    htmlFor="comments-postCommentForm-field"
                  >
                    Post a comment
                  </label>
                  <div
                    className="CommentForm-commentFormBox CommentForm-noTopBorder coral coral-commentForm"
                  >
                    <div
                      role="none"
                    >
                      <div
                        className="coral coral-rte"
                        onBlur={[Function]}
                        onFocus={[Function]}
                      >
                        <div
                          className="RTE.module-contentEditableContainer RTE-container coral coral-rte-container"
                        >
                          <div
                            aria-placeholder="Post a comment"
                            className="RTE.module-contentEditable coral coral-rte-content RTE-content"
                            id="comments-postCommentForm-field"
                          />
                          <div
                            aria-hidden="true"
                            className="RTE.module-placeholder coral coral-rte-placeholder RTE-placeholder"
                          >
                            Post a comment
                          </div>
                        </div>
                        <div
                          className="coral coral-rte-toolbar RTE-toolbar RTE.module-toolbarBottom Toolbar.module-toolbar"
                        >
                          <button
                            aria-pressed={false}
                            className="BaseButton-root RTEButton-button"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onTouchEnd={[Function]}
                            title="Bold"
                            type="button"
                          >
                            <span
                              className="SvgIcon-root SvgIcon-md SvgIcon-strokeWidthBold SvgIcon-noFill"
                            >
                              <svg
                                viewBox="-0.25 -0.25 24.5 24.5"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M3.75,23.248H13.5a6.75,6.75,0,0,0,0-13.5h.75a4.5,4.5,0,1,0,0-9H3.75"
                                  fill="none"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                />
                                <path
                                  d="M6.75 0.748L6.75 23.248"
                                  fill="none"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                />
                                <path
                                  d="M13.5 9.748L6.75 9.748"
                                  fill="none"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                />
                              </svg>
                            </span>
                          </button>
                          <button
                            aria-pressed={false}
                            className="BaseButton-root RTEButton-button"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onTouchEnd={[Function]}
                            title="Italic"
                            type="button"
                          >
                            <span
                              className="SvgIcon-root SvgIcon-md SvgIcon-strokeWidthRegular SvgIcon-noFill"
                            >
                              <svg
                                viewBox="-0.25 -0.25 24.5 24.5"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M23.25 0.748L12.75 0.748"
                                  fill="none"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                />
                                <path
                                  d="M11.25 23.248L0.75 23.248"
                                  fill="none"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                />
                                <path
                                  d="M6 23.248L18 0.748"
                                  fill="none"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                />
                              </svg>
                            </span>
                          </button>
                          <button
                            aria-pressed={false}
                            className="BaseButton-root RTEButton-button"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onTouchEnd={[Function]}
                            title="Blockquote"
                            type="button"
                          >
                            <span
                              className="SvgIcon-root SvgIcon-md SvgIcon-strokeWidthRegular SvgIcon-filled"
                            >
                              <svg
                                viewBox="-0.25 -0.25 24.5 24.5"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M14.250 9.248 A4.500 4.500 0 1 0 23.250 9.248 A4.500 4.500 0 1 0 14.250 9.248 Z"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                />
                                <path
                                  d="M23.25,9.248a10.5,10.5,0,0,1-10.5,10.5"
                                  fill="none"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                />
                                <path
                                  d="M2.250 9.248 A4.500 4.500 0 1 0 11.250 9.248 A4.500 4.500 0 1 0 2.250 9.248 Z"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                />
                                <path
                                  d="M11.25,9.248a10.5,10.5,0,0,1-10.5,10.5"
                                  fill="none"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                />
                              </svg>
                            </span>
                          </button>
                          <button
                            aria-pressed={false}
                            className="BaseButton-root RTEButton-button"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onTouchEnd={[Function]}
                            title="Bulleted List"
                            type="button"
                          >
                            <span
                              className="SvgIcon-root SvgIcon-md SvgIcon-strokeWidthRegular SvgIcon-noFill"
                            >
                              <svg
                                viewBox="-0.25 -0.25 24.5 24.5"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g>
                                  <circle
                                    cx="3"
                                    cy="3"
                                    fill="none"
                                    r="2.25"
                                    stroke="currentColor"
                                    strokeLinecap="round"
                                    strokeLinejoin="round"
                                  />
                                  <circle
                                    cx="3"
                                    cy="12"
                                    fill="none"
                                    r="2.25"
                                    stroke="currentColor"
                                    strokeLinecap="round"
                                    strokeLinejoin="round"
                                  />
                                  <circle
                                    cx="3"
                                    cy="21"
                                    fill="none"
                                    r="2.25"
                                    stroke="currentColor"
                                    strokeLinecap="round"
                                    strokeLinejoin="round"
                                  />
                                  <line
                                    fill="none"
                                    stroke="currentColor"
                                    strokeLinecap="round"
                                    strokeLinejoin="round"
                                    x1="8.25"
                                    x2="23.25"
                                    y1="3"
                                    y2="3"
                                  />
                                  <line
                                    fill="none"
                                    stroke="currentColor"
                                    strokeLinecap="round"
                                    strokeLinejoin="round"
                                    x1="8.25"
                                    x2="23.25"
                                    y1="12"
                                    y2="12"
                                  />
                                  <line
                                    fill="none"
                                    stroke="currentColor"
                                    strokeLinecap="round"
                                    strokeLinejoin="round"
                                    x1="8.25"
                                    x2="23.25"
                                    y1="21"
                                    y2="21"
                                  />
                                </g>
                              </svg>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd gutter Flex-spacing-1"
                >
                  <button
                    className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorPrimary Button-disabled Button-upperCase coral coral-createComment-submit"
                    data-variant="filled"
                    disabled={true}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="submit"
                  >
                    Submit
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </section>
    <div
      className="Box-root HorizontalGutter-root StreamContainer-tabBarContainer HorizontalGutter-spacing-4"
    >
      <nav
        aria-label="Secondary Tablist"
        className="Box-root Flex-root StreamContainer-tabBarRow coral coral-tabBarSecondary-row Flex-flex Flex-justifySpaceBetween Flex-alignFlexEnd Flex-directionRow"
      >
        <ul
          className="TabBar-root TabBar-streamSecondary coral coral-tabBarSecondary coral-tabBarComments StreamContainer-tabBarRoot"
          role="tablist"
        >
          <li
            className="Tab-root"
            id="tab-ALL_COMMENTS"
            role="presentation"
          >
            <button
              aria-controls="tabPane-ALL_COMMENTS"
              aria-selected={true}
              className="BaseButton-root Tab-button Tab-streamSecondary Tab-active coral-tabBarSecondary-tab-active coral coral-tabBarSecondary-tab coral-tabBarComments-allComments"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              role="tab"
              type="button"
            >
              <div
                className="AriaInfo-root"
              >
                <span>
                  Tab:
                </span>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-alignCenter gutter Flex-spacing-1"
              >
                <span>
                  All Comments
                </span>
                <div
                  className="AriaInfo-root"
                >
                  (
                </div>
                <span
                  className="Counter-root Counter-colorInherit Counter-sizeSmall coral coral-counter"
                >
                  <span
                    className="Counter-text"
                  >
                    0
                  </span>
                </span>
                <div
                  className="AriaInfo-root"
                >
                  )
                </div>
              </div>
            </button>
          </li>
        </ul>
        <div
          className="Box-root Flex-root StreamContainer-sortMenu coral coral-sortMenu Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
        >
          <label
            className="SortMenu-label"
            htmlFor="coral-comments-sortMenu"
          >
            Sort by
          </label>
          <span
            className="SelectField-root coral coral-sortMenu"
          >
            <select
              className="SelectField-select SortMenu-select SelectField-selectFont SortMenu-selectFont SelectField-selectColor SortMenu-selectColor coral-selectField"
              id="coral-comments-sortMenu"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              value="CREATED_AT_DESC"
            >
              <option
                value="CREATED_AT_DESC"
              >
                Newest
              </option>
              <option
                value="CREATED_AT_ASC"
              >
                Oldest
              </option>
              <option
                value="REPLIES_DESC"
              >
                Most replies
              </option>
              <option
                value="REACTION_DESC"
              >
                Most Respected
              </option>
            </select>
            <span
              aria-hidden={true}
              className="SelectField-afterWrapper"
            >
              <span
                className="SvgIcon-root SvgIcon-xs SvgIcon-strokeWidthRegular SvgIcon-noFill"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M23.25 7.311L12.53 18.03C12.4604 18.0997 12.3778 18.1549 12.2869 18.1926C12.1959 18.2304 12.0984 18.2498 12 18.2498C11.9016 18.2498 11.8041 18.2304 11.7131 18.1926C11.6222 18.1549 11.5396 18.0997 11.47 18.03L0.75 7.311"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </nav>
      <section
        aria-labelledby="tab-ALL_COMMENTS"
        className="coral coral-allComments"
        id="tabPane-ALL_COMMENTS"
      >
        <div>
          <div />
          <div
            aria-live="off"
            className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
            data-testid="comments-allComments-log"
            id="comments-allComments-log"
            role="log"
          >
            <div
              className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
            >
              <div
                className="CallOut-inner"
              >
                There are no comments yet. Why don't you write one?
              </div>
            </div>
            <div
              data-virtuoso-scroller={true}
              style={
                Object {
                  "height": 0,
                  "position": "relative",
                }
              }
            >
              <div
                data-viewport-type="window"
                style={
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
              >
                <div
                  data-test-id="virtuoso-item-list"
                  style={
                    Object {
                      "boxSizing": "border-box",
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingTop": 0,
                    }
                  }
                />
                <div />
              </div>
            </div>
            <nav
              aria-label="Comments Footer"
              className="CommentsLinks-container coral coral-streamFooter"
            >
              <button
                className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-profileLink"
                data-variant="textUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                title="Go to profile and replies"
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-sm ButtonSvgIcon-root CommentsLinks-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.750 9.750 A5.250 5.250 0 1 0 17.250 9.750 A5.250 5.250 0 1 0 6.750 9.750 Z"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M18.913,20.876a9.746,9.746,0,0,0-13.826,0"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M0.750 12.000 A11.250 11.250 0 1 0 23.250 12.000 A11.250 11.250 0 1 0 0.750 12.000 Z"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
                <span>
                  Profile & Replies
                </span>
              </button>
              <button
                className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-commentsTopLink"
                data-variant="textUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                title="Go to top of comments"
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-sm ButtonSvgIcon-root CommentsLinks-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.75,8.25h-12l-4.5,4.5V8.25h-3a1.5,1.5,0,0,1-1.5-1.5V2.25A1.5,1.5,0,0,1,2.25.75h19.5a1.5,1.5,0,0,1,1.5,1.5v4.5A1.5,1.5,0,0,1,21.75,8.25Z"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M2.25,11.25a1.5,1.5,0,0,0-1.5,1.5v4.5a1.5,1.5,0,0,0,1.5,1.5h12l4.5,4.5v-4.5h3a1.5,1.5,0,0,0,1.5-1.5v-4.5a1.5,1.5,0,0,0-1.5-1.5H11.25"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
                <span>
                  Top of comments
                </span>
              </button>
              <button
                className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-articleTopLink"
                data-variant="textUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                title="Go to top of article"
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-sm ButtonSvgIcon-root CommentsLinks-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22.5,21.75a1.5,1.5,0,0,1-1.5,1.5H3a1.5,1.5,0,0,1-1.5-1.5V2.25A1.5,1.5,0,0,1,3,.75H18.045a1.5,1.5,0,0,1,1.048.426l2.954,2.883A1.5,1.5,0,0,1,22.5,5.133Z"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M6.045 8.25L18.045 8.25"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M6.045 12.75L18.045 12.75"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M6.045 17.25L12.045 17.25"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
                <span>
                  Top of article
                </span>
              </button>
            </nav>
          </div>
        </div>
      </section>
    </div>
  </div>
</section>
`;

exports[`renders message box when not logged in 1`] = `
<section
  aria-labelledby="tab-COMMENTS"
  className="App-tabContent coral coral-comments"
  data-testid="current-tab-pane"
  id="tabPane-COMMENTS"
>
  <div
    className="Box-root HorizontalGutter-root StreamContainer-root coral coral-unauthenticated HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifySpaceBetween Flex-alignFlexStart"
    >
      <section
        aria-label="Authentication"
        className="Box-root Flex-root coral coral-viewerBox Flex-flex Flex-wrap Flex-alignCenter"
      >
        <span
          className="UserBoxUnauthenticated-joinText coral coral-viewerBox-joinText"
        >
          Join the conversation
        </span>
        <div
          className="UserBoxUnauthenticated-actions coral coral-viewerBox-actionButtons"
        >
          <button
            className="BaseButton-root Button-base Button-filled Button-fontSizeExtraSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeExtraSmall Button-colorPrimary Button-upperCase UserBoxUnauthenticated-register coral coral-viewerBox-registerButton"
            data-variant="filled"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Register
          </button>
          <button
            className="BaseButton-root Button-base Button-outlined Button-fontSizeExtraSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeExtraSmall Button-colorPrimary Button-upperCase coral coral-viewerBox-signInButton"
            data-variant="outlined"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Sign in
          </button>
        </div>
      </section>
      <div
        className="StreamContainer-rightStreamHeader"
      />
    </div>
    <section
      aria-label="Post a Comment"
    >
      <div
        className="coral coral-createComment"
        id="post-comment-form"
      >
        <div
          className="MessageBox-root coral coral-createComment-message PostCommentFormFake-messageBox"
        >
          <span
            className="SvgIcon-root SvgIcon-sm MessageBoxIcon-root SvgIcon-strokeWidthRegular SvgIcon-noFill"
          >
            <svg
              viewBox="-0.25 -0.25 24.5 24.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.75,18.75H11.25l-6,4.5v-4.5h-3a1.5,1.5,0,0,1-1.5-1.5v-15A1.5,1.5,0,0,1,2.25.75h19.5a1.5,1.5,0,0,1,1.5,1.5v15A1.5,1.5,0,0,1,21.75,18.75Z"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </span>
          <div
            className="Markdown-root MessageBoxContent-root MessageBoxContainer-withIcon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><strong>What do you think</strong>?</p>
",
              }
            }
          />
        </div>
        <div
          className="Box-root HorizontalGutter-root PostCommentFormFake-root HorizontalGutter-full"
        >
          <div
            className="PostCommentFormFake-rteContainer coral coral-rte-fake-container"
          >
            <div
              role="none"
            >
              <div
                className="coral coral-rte"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  className="RTE.module-contentEditableContainer RTE-container coral coral-rte-container"
                >
                  <div
                    aria-placeholder="Post a comment"
                    className="RTE.module-contentEditable coral coral-rte-content RTE-content"
                  />
                  <div
                    aria-hidden="true"
                    className="RTE.module-placeholder coral coral-rte-placeholder RTE-placeholder"
                  >
                    Post a comment
                  </div>
                </div>
                <div
                  className="coral coral-rte-toolbar RTE-toolbar RTE.module-toolbarBottom Toolbar.module-toolbar"
                >
                  <button
                    aria-pressed={false}
                    className="BaseButton-root RTEButton-button"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    title="Bold"
                    type="button"
                  >
                    <span
                      className="SvgIcon-root SvgIcon-md SvgIcon-strokeWidthBold SvgIcon-noFill"
                    >
                      <svg
                        viewBox="-0.25 -0.25 24.5 24.5"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3.75,23.248H13.5a6.75,6.75,0,0,0,0-13.5h.75a4.5,4.5,0,1,0,0-9H3.75"
                          fill="none"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                        <path
                          d="M6.75 0.748L6.75 23.248"
                          fill="none"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                        <path
                          d="M13.5 9.748L6.75 9.748"
                          fill="none"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-pressed={false}
                    className="BaseButton-root RTEButton-button"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    title="Italic"
                    type="button"
                  >
                    <span
                      className="SvgIcon-root SvgIcon-md SvgIcon-strokeWidthRegular SvgIcon-noFill"
                    >
                      <svg
                        viewBox="-0.25 -0.25 24.5 24.5"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M23.25 0.748L12.75 0.748"
                          fill="none"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                        <path
                          d="M11.25 23.248L0.75 23.248"
                          fill="none"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                        <path
                          d="M6 23.248L18 0.748"
                          fill="none"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-pressed={false}
                    className="BaseButton-root RTEButton-button"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    title="Blockquote"
                    type="button"
                  >
                    <span
                      className="SvgIcon-root SvgIcon-md SvgIcon-strokeWidthRegular SvgIcon-filled"
                    >
                      <svg
                        viewBox="-0.25 -0.25 24.5 24.5"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M14.250 9.248 A4.500 4.500 0 1 0 23.250 9.248 A4.500 4.500 0 1 0 14.250 9.248 Z"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                        <path
                          d="M23.25,9.248a10.5,10.5,0,0,1-10.5,10.5"
                          fill="none"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                        <path
                          d="M2.250 9.248 A4.500 4.500 0 1 0 11.250 9.248 A4.500 4.500 0 1 0 2.250 9.248 Z"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                        <path
                          d="M11.25,9.248a10.5,10.5,0,0,1-10.5,10.5"
                          fill="none"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-pressed={false}
                    className="BaseButton-root RTEButton-button"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    title="Bulleted List"
                    type="button"
                  >
                    <span
                      className="SvgIcon-root SvgIcon-md SvgIcon-strokeWidthRegular SvgIcon-noFill"
                    >
                      <svg
                        viewBox="-0.25 -0.25 24.5 24.5"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <circle
                            cx="3"
                            cy="3"
                            fill="none"
                            r="2.25"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                          />
                          <circle
                            cx="3"
                            cy="12"
                            fill="none"
                            r="2.25"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                          />
                          <circle
                            cx="3"
                            cy="21"
                            fill="none"
                            r="2.25"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                          />
                          <line
                            fill="none"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            x1="8.25"
                            x2="23.25"
                            y1="3"
                            y2="3"
                          />
                          <line
                            fill="none"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            x1="8.25"
                            x2="23.25"
                            y1="12"
                            y2="12"
                          />
                          <line
                            fill="none"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            x1="8.25"
                            x2="23.25"
                            y1="21"
                            y2="21"
                          />
                        </g>
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <button
            className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorPrimary Button-fullWidth coral coral-createComment-signIn"
            data-variant="filled"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="submit"
          >
            Sign in and Join the Conversation
          </button>
        </div>
      </div>
    </section>
    <div
      className="Box-root HorizontalGutter-root StreamContainer-tabBarContainer HorizontalGutter-spacing-4"
    >
      <nav
        aria-label="Secondary Tablist"
        className="Box-root Flex-root StreamContainer-tabBarRow coral coral-tabBarSecondary-row Flex-flex Flex-justifySpaceBetween Flex-alignFlexEnd Flex-directionRow"
      >
        <ul
          className="TabBar-root TabBar-streamSecondary coral coral-tabBarSecondary coral-tabBarComments StreamContainer-tabBarRoot"
          role="tablist"
        >
          <li
            className="Tab-root"
            id="tab-ALL_COMMENTS"
            role="presentation"
          >
            <button
              aria-controls="tabPane-ALL_COMMENTS"
              aria-selected={true}
              className="BaseButton-root Tab-button Tab-streamSecondary Tab-active coral-tabBarSecondary-tab-active coral coral-tabBarSecondary-tab coral-tabBarComments-allComments"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              role="tab"
              type="button"
            >
              <div
                className="AriaInfo-root"
              >
                <span>
                  Tab:
                </span>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-alignCenter gutter Flex-spacing-1"
              >
                <span>
                  All Comments
                </span>
                <div
                  className="AriaInfo-root"
                >
                  (
                </div>
                <span
                  className="Counter-root Counter-colorInherit Counter-sizeSmall coral coral-counter"
                >
                  <span
                    className="Counter-text"
                  >
                    0
                  </span>
                </span>
                <div
                  className="AriaInfo-root"
                >
                  )
                </div>
              </div>
            </button>
          </li>
        </ul>
        <div
          className="Box-root Flex-root StreamContainer-sortMenu coral coral-sortMenu Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
        >
          <label
            className="SortMenu-label"
            htmlFor="coral-comments-sortMenu"
          >
            Sort by
          </label>
          <span
            className="SelectField-root coral coral-sortMenu"
          >
            <select
              className="SelectField-select SortMenu-select SelectField-selectFont SortMenu-selectFont SelectField-selectColor SortMenu-selectColor coral-selectField"
              id="coral-comments-sortMenu"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              value="CREATED_AT_DESC"
            >
              <option
                value="CREATED_AT_DESC"
              >
                Newest
              </option>
              <option
                value="CREATED_AT_ASC"
              >
                Oldest
              </option>
              <option
                value="REPLIES_DESC"
              >
                Most replies
              </option>
              <option
                value="REACTION_DESC"
              >
                Most Respected
              </option>
            </select>
            <span
              aria-hidden={true}
              className="SelectField-afterWrapper"
            >
              <span
                className="SvgIcon-root SvgIcon-xs SvgIcon-strokeWidthRegular SvgIcon-noFill"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M23.25 7.311L12.53 18.03C12.4604 18.0997 12.3778 18.1549 12.2869 18.1926C12.1959 18.2304 12.0984 18.2498 12 18.2498C11.9016 18.2498 11.8041 18.2304 11.7131 18.1926C11.6222 18.1549 11.5396 18.0997 11.47 18.03L0.75 7.311"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </nav>
      <section
        aria-labelledby="tab-ALL_COMMENTS"
        className="coral coral-allComments"
        id="tabPane-ALL_COMMENTS"
      >
        <div>
          <div />
          <div
            aria-live="off"
            className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
            data-testid="comments-allComments-log"
            id="comments-allComments-log"
            role="log"
          >
            <div
              className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
            >
              <div
                className="CallOut-inner"
              >
                There are no comments yet. Why don't you write one?
              </div>
            </div>
            <div
              data-virtuoso-scroller={true}
              style={
                Object {
                  "height": 0,
                  "position": "relative",
                }
              }
            >
              <div
                data-viewport-type="window"
                style={
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
              >
                <div
                  data-test-id="virtuoso-item-list"
                  style={
                    Object {
                      "boxSizing": "border-box",
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingTop": 0,
                    }
                  }
                />
                <div />
              </div>
            </div>
            <nav
              aria-label="Comments Footer"
              className="CommentsLinks-container coral coral-streamFooter"
            >
              <button
                className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-commentsTopLink"
                data-variant="textUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                title="Go to top of comments"
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-sm ButtonSvgIcon-root CommentsLinks-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.75,8.25h-12l-4.5,4.5V8.25h-3a1.5,1.5,0,0,1-1.5-1.5V2.25A1.5,1.5,0,0,1,2.25.75h19.5a1.5,1.5,0,0,1,1.5,1.5v4.5A1.5,1.5,0,0,1,21.75,8.25Z"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M2.25,11.25a1.5,1.5,0,0,0-1.5,1.5v4.5a1.5,1.5,0,0,0,1.5,1.5h12l4.5,4.5v-4.5h3a1.5,1.5,0,0,0,1.5-1.5v-4.5a1.5,1.5,0,0,0-1.5-1.5H11.25"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
                <span>
                  Top of comments
                </span>
              </button>
              <button
                className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-articleTopLink"
                data-variant="textUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                title="Go to top of article"
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-sm ButtonSvgIcon-root CommentsLinks-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22.5,21.75a1.5,1.5,0,0,1-1.5,1.5H3a1.5,1.5,0,0,1-1.5-1.5V2.25A1.5,1.5,0,0,1,3,.75H18.045a1.5,1.5,0,0,1,1.048.426l2.954,2.883A1.5,1.5,0,0,1,22.5,5.133Z"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M6.045 8.25L18.045 8.25"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M6.045 12.75L18.045 12.75"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M6.045 17.25L12.045 17.25"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
                <span>
                  Top of article
                </span>
              </button>
            </nav>
          </div>
        </div>
      </section>
    </div>
  </div>
</section>
`;

exports[`renders message box when story isClosed 1`] = `
<section
  aria-labelledby="tab-COMMENTS"
  className="App-tabContent coral coral-comments"
  data-testid="current-tab-pane"
  id="tabPane-COMMENTS"
>
  <div
    className="Box-root HorizontalGutter-root StreamContainer-root coral coral-unauthenticated HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifySpaceBetween Flex-alignFlexStart"
    >
      <section
        aria-label="Authentication"
        className="Box-root Flex-root coral coral-viewerBox Flex-flex Flex-wrap Flex-alignCenter"
      >
        <span
          className="UserBoxUnauthenticated-joinText coral coral-viewerBox-joinText"
        >
          Join the conversation
        </span>
        <div
          className="UserBoxUnauthenticated-actions coral coral-viewerBox-actionButtons"
        >
          <button
            className="BaseButton-root Button-base Button-filled Button-fontSizeExtraSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeExtraSmall Button-colorPrimary Button-upperCase UserBoxUnauthenticated-register coral coral-viewerBox-registerButton"
            data-variant="filled"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Register
          </button>
          <button
            className="BaseButton-root Button-base Button-outlined Button-fontSizeExtraSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeExtraSmall Button-colorPrimary Button-upperCase coral coral-viewerBox-signInButton"
            data-variant="outlined"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Sign in
          </button>
        </div>
      </section>
      <div
        className="StreamContainer-rightStreamHeader"
      />
    </div>
    <section
      aria-label="Post a Comment"
    >
      <div
        className="coral coral-createComment"
      >
        <div
          className="MessageBox-root coral coral-createComment-message PostCommentFormClosed-messageBox"
        >
          <div
            className="Markdown-root MessageBoxContent-root MessageBoxContainer-withoutIcon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><strong>What do you think</strong>?</p>
",
              }
            }
          />
        </div>
        <div
          className="CallOut-root CallOut-mono CallOut-leftBorder coral coral-createComment-closed"
        >
          <div
            className="CallOut-container"
          >
            <div
              className="CallOut-icon CallOut-mono CallOut-leftIcon"
            >
              <span
                className="SvgIcon-root SvgIcon-sm SvgIcon-strokeWidthRegular SvgIcon-noFill"
              >
                <svg
                  viewBox="-0.25 -0.25 24.5 24.5"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21.75 18.75H11.25L5.25 23.25V18.75H2.25C1.85218 18.75 1.47064 18.592 1.18934 18.3107C0.908035 18.0294 0.75 17.6478 0.75 17.25V2.25C0.75 1.85218 0.908035 1.47064 1.18934 1.18934C1.47064 0.908035 1.85218 0.75 2.25 0.75H21.75C22.1478 0.75 22.5294 0.908035 22.8107 1.18934C23.092 1.47064 23.25 1.85218 23.25 2.25V17.25C23.25 17.6478 23.092 18.0294 22.8107 18.3107C22.5294 18.592 22.1478 18.75 21.75 18.75Z"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                  <path
                    d="M12.75 15C12.5429 15 12.375 14.8321 12.375 14.625C12.375 14.4179 12.5429 14.25 12.75 14.25"
                    stroke="currentColor"
                  />
                  <path
                    d="M12.75 15C12.9571 15 13.125 14.8321 13.125 14.625C13.125 14.4179 12.9571 14.25 12.75 14.25"
                    stroke="currentColor"
                  />
                  <path
                    d="M12.75 11.25V5.25"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </div>
            <div
              className="CallOut-content"
            >
              <div
                className="CallOut-title CallOut-titleSemiBold"
              >
                <div
                  className="Markdown-root"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<p>Story is closed</p>
",
                    }
                  }
                />
              </div>
              <div
                className="CallOut-body"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
    <div
      className="Box-root HorizontalGutter-root StreamContainer-tabBarContainer HorizontalGutter-spacing-4"
    >
      <nav
        aria-label="Secondary Tablist"
        className="Box-root Flex-root StreamContainer-tabBarRow coral coral-tabBarSecondary-row Flex-flex Flex-justifySpaceBetween Flex-alignFlexEnd Flex-directionRow"
      >
        <ul
          className="TabBar-root TabBar-streamSecondary coral coral-tabBarSecondary coral-tabBarComments StreamContainer-tabBarRoot"
          role="tablist"
        >
          <li
            className="Tab-root"
            id="tab-ALL_COMMENTS"
            role="presentation"
          >
            <button
              aria-controls="tabPane-ALL_COMMENTS"
              aria-selected={true}
              className="BaseButton-root Tab-button Tab-streamSecondary Tab-active coral-tabBarSecondary-tab-active coral coral-tabBarSecondary-tab coral-tabBarComments-allComments"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              role="tab"
              type="button"
            >
              <div
                className="AriaInfo-root"
              >
                <span>
                  Tab:
                </span>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-alignCenter gutter Flex-spacing-1"
              >
                <span>
                  All Comments
                </span>
                <div
                  className="AriaInfo-root"
                >
                  (
                </div>
                <span
                  className="Counter-root Counter-colorInherit Counter-sizeSmall coral coral-counter"
                >
                  <span
                    className="Counter-text"
                  >
                    0
                  </span>
                </span>
                <div
                  className="AriaInfo-root"
                >
                  )
                </div>
              </div>
            </button>
          </li>
        </ul>
        <div
          className="Box-root Flex-root StreamContainer-sortMenu coral coral-sortMenu Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
        >
          <label
            className="SortMenu-label"
            htmlFor="coral-comments-sortMenu"
          >
            Sort by
          </label>
          <span
            className="SelectField-root coral coral-sortMenu"
          >
            <select
              className="SelectField-select SortMenu-select SelectField-selectFont SortMenu-selectFont SelectField-selectColor SortMenu-selectColor coral-selectField"
              id="coral-comments-sortMenu"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              value="CREATED_AT_DESC"
            >
              <option
                value="CREATED_AT_DESC"
              >
                Newest
              </option>
              <option
                value="CREATED_AT_ASC"
              >
                Oldest
              </option>
              <option
                value="REPLIES_DESC"
              >
                Most replies
              </option>
              <option
                value="REACTION_DESC"
              >
                Most Respected
              </option>
            </select>
            <span
              aria-hidden={true}
              className="SelectField-afterWrapper"
            >
              <span
                className="SvgIcon-root SvgIcon-xs SvgIcon-strokeWidthRegular SvgIcon-noFill"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M23.25 7.311L12.53 18.03C12.4604 18.0997 12.3778 18.1549 12.2869 18.1926C12.1959 18.2304 12.0984 18.2498 12 18.2498C11.9016 18.2498 11.8041 18.2304 11.7131 18.1926C11.6222 18.1549 11.5396 18.0997 11.47 18.03L0.75 7.311"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </span>
          </span>
        </div>
      </nav>
      <section
        aria-labelledby="tab-ALL_COMMENTS"
        className="coral coral-allComments"
        id="tabPane-ALL_COMMENTS"
      >
        <div>
          <div />
          <div
            aria-live="off"
            className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
            data-testid="comments-allComments-log"
            id="comments-allComments-log"
            role="log"
          >
            <div
              className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
            >
              <div
                className="CallOut-inner"
              >
                There are no comments on this story.
              </div>
            </div>
            <div
              data-virtuoso-scroller={true}
              style={
                Object {
                  "height": 0,
                  "position": "relative",
                }
              }
            >
              <div
                data-viewport-type="window"
                style={
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
              >
                <div
                  data-test-id="virtuoso-item-list"
                  style={
                    Object {
                      "boxSizing": "border-box",
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingTop": 0,
                    }
                  }
                />
                <div />
              </div>
            </div>
            <nav
              aria-label="Comments Footer"
              className="CommentsLinks-container coral coral-streamFooter"
            >
              <button
                className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-commentsTopLink"
                data-variant="textUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                title="Go to top of comments"
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-sm ButtonSvgIcon-root CommentsLinks-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.75,8.25h-12l-4.5,4.5V8.25h-3a1.5,1.5,0,0,1-1.5-1.5V2.25A1.5,1.5,0,0,1,2.25.75h19.5a1.5,1.5,0,0,1,1.5,1.5v4.5A1.5,1.5,0,0,1,21.75,8.25Z"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M2.25,11.25a1.5,1.5,0,0,0-1.5,1.5v4.5a1.5,1.5,0,0,0,1.5,1.5h12l4.5,4.5v-4.5h3a1.5,1.5,0,0,0,1.5-1.5v-4.5a1.5,1.5,0,0,0-1.5-1.5H11.25"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
                <span>
                  Top of comments
                </span>
              </button>
              <button
                className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-articleTopLink"
                data-variant="textUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                title="Go to top of article"
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-sm ButtonSvgIcon-root CommentsLinks-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22.5,21.75a1.5,1.5,0,0,1-1.5,1.5H3a1.5,1.5,0,0,1-1.5-1.5V2.25A1.5,1.5,0,0,1,3,.75H18.045a1.5,1.5,0,0,1,1.048.426l2.954,2.883A1.5,1.5,0,0,1,22.5,5.133Z"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M6.045 8.25L18.045 8.25"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M6.045 12.75L18.045 12.75"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M6.045 17.25L12.045 17.25"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
                <span>
                  Top of article
                </span>
              </button>
            </nav>
          </div>
        </div>
      </section>
    </div>
  </div>
</section>
`;
